--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,1 +1,6 @@
-{{ content }}
+<head>
+  <link rel="icon" href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAIAAADwH3ibAAAAGklEQVR42mJkYGBgYGBgAAD/AAEaAVn9uSNaAAAAAElFTkSuQmCC" type="image/png">
+</head>
+<body>
+  {{ content }}
+</body>
