--- a/one/monokai.css
+++ b/one/monokai.css
@@ -212,6 +212,6 @@
   color: #f92672;
 }
 .highlight {
-  color: #f8f8f2;
-  background-color: #49483e;
+  color: #ffffff;
+  background-color: #000000;
 }
