--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,6 @@
 
 
   <div id="content" data-json="someJSONfile.json"></div>
-  <script src="kassetteLoader.js"></script>
+  <script src="/kassetteLoader.js"></script>
 </body>
 
