--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
   {{ content }}
 
 
-  <div id="content" data-json="/one/someJSONfile.json"></div>
+  <div id="content" data-json="/aabb/one/someJSONfile.json"></div>
   <script src="/aabb/kassetteLoader.js"></script>
 </body>
 
